--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "cheerio": "^1.0.0-rc.1",
+    "cssbeautify": "^0.3.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -49,6 +50,7 @@
     "karma-coverage": "^1.1.1",
     "karma-jasmine": "^1.1.0",
     "karma-jspm": "^2.2.3",
+    "less": "^2.7.2",
     "object.assign": "^4.0.4",
     "pretty": "^2.0.0",
     "require-dir": "^0.3.2",
