--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-    "presets": ["env"],
+    "presets": ["env", "stage-0"],
     "plugins": [
+        "transform-runtime",
         "transform-class-properties"
     ]
 }
