--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
@@ -32,7 +33,6 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "cheerio": "^1.0.0-rc.1",
-    "cssbeautify": "^0.3.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -56,6 +56,7 @@
     "require-dir": "^0.3.2",
     "run-sequence": "^1.2.2",
     "testcafe": "^0.15.0",
+    "uglifycss": "0.0.27",
     "vinyl-paths": "^2.1.0"
   }
 }
