--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "babel-runtime": "^6.23.0",
     "cheerio": "^1.0.0-rc.1",
     "del": "^2.2.2",
+    "extend": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^1.0.0",
     "gulp-data": "^1.2.1",
     "gulp-run-sequence": "^0.3.2",
+    "gutil": "^1.6.4",
     "html-minifier": "^3.5.2",
     "htmllint": "^0.6.0",
     "http-server": "^0.10.0",
@@ -57,6 +59,7 @@
     "run-sequence": "^1.2.2",
     "testcafe": "^0.15.0",
     "uglifycss": "0.0.27",
+    "uglifyjs": "^2.4.11",
     "vinyl-paths": "^2.1.0"
   }
 }
