--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "babel-plugin-transform-es2015-modules-amd": "^6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
@@ -34,7 +33,6 @@
     "babel-runtime": "^6.23.0",
     "cheerio": "^1.0.0-rc.1",
     "del": "^2.2.2",
-    "extend": "^3.0.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
@@ -58,8 +56,8 @@
     "require-dir": "^0.3.2",
     "run-sequence": "^1.2.2",
     "testcafe": "^0.15.0",
-    "uglifycss": "0.0.27",
-    "uglifyjs": "^2.4.11",
+    "uglify-js": "^3.0.18",
+    "uglifycss": "^0.0.27",
     "vinyl-paths": "^2.1.0"
   }
 }
